feat: rootCategories API
